# torchdbg

./: .gitignore  .prettierignore  LICENSE  README.md  custom.d.ts  next.config.mjs  package-lock.json  package.json  plan.txt
app/: globals.css  layout.tsx  page.tsx
app/api/files/: route.ts
components/: Debugger.tsx
python/: README.md  pyproject.toml  test.py  torchdbg.py
python/torchdbg/: __init__.py
